--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <div class="m-2">
   <button class="btn btn-primary" type="button">button</button>
   </div>
-  <button class="btn btn-success" type="button">button</button>
+  <button class="btn btn-success" type="button">Submit</button>
 </body>
 </html>
