--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="m-2 border">
+  <div class="m-2 p-2 border radius">
   <button class="btn btn-primary" type="button">button</button>
-    <div class=""><i class="fa-solid fa-user"></i></div>
+    <div class="mt-2">
+      <p><i class="fa-solid fa-user"></i></p>
+    </div>
   </div>
   
   <button class="btn btn-success" type="button">Submit</button>
