--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="m-2 p-2 border radius">
   <button class="btn btn-primary" type="button">button</button>
     <div class="mt-2">
-      <p><i class="fa-solid fa-user"></i></p>
+      <p><i class="fa-solid fa-user"></i> Birawa Kaca</p>
     </div>
   </div>
   
