--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <div class="m-2 p-2 border radius">
   <button class="btn btn-primary" type="button">button</button>
     <div class="mt-2">
-      <p><i class="fa-solid fa-user"></i> Birawa Kaca</p>
+      <p><span class="fa-solid fa-user"></span> Birawa Kaca</p>
     </div>
   </div>
-  
-  <button class="btn btn-success" type="button">Submit</button>
+  <div class="p-2">
+    <button class="btn btn-success d-block" type="button">Submit</button>
+  </div>
 </body>
 </html>
