--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/c9074de04c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="m-2 p-2 border radius">
+  <div class="m-2 p-2 border rounded">
   <button class="btn btn-primary" type="button">button</button>
     <div class="mt-2">
       <p><span class="fa-solid fa-user"></span> Birawa Kaca</p>
